--- a/css/booking.css
+++ b/css/booking.css
@@ -13,46 +13,55 @@
   color: white;
 }
 
-#booking-box:hover {
+.booking-box:hover {
   /*
   hover effekt her
    */
 }
-#activities{
+.activities{
   width: 100%;
 
 }
 
-#activity-box {
+.activity-box {
   margin-top: 10px;
+  margin-bottom: 10px;
   width: 100%;
   height: 250px;
   background-color: gray;
   display: flex;
 }
 
-#activity-info{
-  width: 25%;
+.activity-info{
+  width: 35%;
   height: 100%;
   background-color: orange;
 }
 
-#activity-info h2 {
+.activity-info h2 {
   margin: auto;
 }
-#activity-info p {
+.activity-info p {
   margin: auto;
 }
 
-#image-poster {
-  background-image: url("../images/Paintball2.jpg");
-  max-width: 100%;
-  max-height: 100%;
+.image-poster img{
+  max-height: 212px;
+  max-width: 246px;
+  object-fit: fill;
 }
 
-#times{
+.times{
   width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: gray;
 
+}
+
+#book button{
+  display: inline-block;
+  width: 150px;
+  height: 50px;
+  background-color: black;
+  color: white;
 }
