--- a/css/booking.css
+++ b/css/booking.css
@@ -40,16 +40,28 @@
   margin: auto;
 }
 
+.image-poster{
+  max-height: 212px;
+  max-width: 246px;
+  object-fit: fill;
+}
+
 .image-poster img{
   max-height: 212px;
   max-width: 246px;
   object-fit: fill;
 }
 
-.times{
+#timetable{
   width: 100%;
   height: 100%;
   background-color: gray;
+}
+
+#times{
+  display: inline;
+  background-color: green;
+  margin: 5px;
 
 }
 
