--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
+
 body {
   overflow-x: hidden;
   background-color: #212529;
@@ -7,6 +9,11 @@ h1 {
   color: #ffffff;
 }
 
+h2 {
+  line-height: 2;
+  text-transform: uppercase;
+}
+
 
 .column {
   float: left;
@@ -14,6 +21,8 @@ h1 {
   flex: 50%;
   margin: 20px;
   text-align: center;
+  font-family: 'Rajdhani', sans-serif;
+  color: #ffffff;
 }
 
 .row {
@@ -27,6 +36,7 @@ h1 {
   clear: both;
 }
 
+/*
 button {
   border: none;
   background-color: #9370db;
@@ -35,6 +45,8 @@ button {
   color: #ffffff;
   text-transform: uppercase;
 }
+
+ */
 
 /* video styles */
 video {
@@ -61,4 +73,30 @@ video {
   width: 100%;
 }
 
+/* button-50 herfra: https://getcssscan.com/css-buttons-examples
+ */
+.button-50 {
+  background-color: #000;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0, #000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Rajdhani', sans-serif;
+  letter-spacing: 1.7px;
+}
+
+.button-50:hover {
+  opacity: 0.5;
+}
 
