--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@500&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -10,11 +13,15 @@
   clear: both;
 }
 
+
 #header{
   display: inline-block;
   width: 100%;
   text-align: center;
   padding-bottom: 5px;
+  position: relative;
+  height: 100vh;
+  justify-content: center;
 }
 
 #navbar{
@@ -28,6 +35,7 @@
   opacity: 0.5;
   font-family: 'Rajdhani', sans-serif;
   text-transform: uppercase;
+
 }
 
 #navbar:hover {
@@ -53,4 +61,5 @@
 
 #navbar a{
   color: white;
+  text-decoration: none;
 }
