--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  font-family: 'Rajdhani', sans-serif;
 }
 
 .clearfix {
@@ -13,6 +14,9 @@
   clear: both;
 }
 
+#body {
+  background-color: #212529;
+}
 
 #header{
   display: inline-block;
@@ -32,7 +36,7 @@
   background: #212529;
   box-shadow: 5px 4px 14px -6px;
   margin-bottom: 1px;
-  opacity: 0.5;
+  opacity: 0.7;
   font-family: 'Rajdhani', sans-serif;
   text-transform: uppercase;
 
@@ -44,7 +48,6 @@
 
 #navbar ul{
   margin-right: 25%;
-
   display: inline-block;
   margin-top: 25px;
 }
@@ -62,4 +65,48 @@
 #navbar a{
   color: white;
   text-decoration: none;
+}
+
+/* Drop down menu */
+.dropbtn {
+  background: #212529;
+  color: white;
+  padding: 16px;
+  border: none;
+  font-family: 'Rajdhani', sans-serif;
+  text-transform: uppercase;
+  font-size: 20px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #212529;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.activities-img {
+  width: 100vw;
+  height: 50vh;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
