Tilføjet en fixed footer

--- a/css/main.css
+++ b/css/main.css
@@ -113,3 +113,42 @@
   top: 0;
   left: 0;
 }
+
+#footer{
+  display: inline-block;
+  color: black;
+  background: #212529;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  position: fixed;
+  justify-content: center;
+}
+
+#footer ul{
+  display: inline-block;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+#footer img{
+ width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+#footer a {
+  color: white;
+}
+
+#footer li:first-child{
+  padding-right: 50px;
+}
+
+#footer li{
+  margin-left: 100px;
+  font-size: 20px;
+  display: inline-block;
+  margin-right: 10px;
+  color: white;
+}
