var nødt til at tilføje linje 25 height: 100vh for at gøre hele confirmation-siden grå

--- a/css/booking.css
+++ b/css/booking.css
@@ -18,8 +18,16 @@ h2 {
   width: 50%;
   height: 100%;
 
-
 }
+
+.allback-book {
+  background-color: #212529;
+  height: 100vh;
+}
+#booking-box {
+  color: white;
+}
+
 
 #booking-box button {
   display: inline-block;
