--- a/css/index.css
+++ b/css/index.css
@@ -50,8 +50,8 @@ button {
 
 /* video styles */
 video {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   position: absolute;
   top: 0;
