--- a/css/booking.css
+++ b/css/booking.css
@@ -72,8 +72,8 @@ h2 {
 }
 
 .image-poster img {
-  max-height: 212px;
-  max-width: 246px;
+  max-height:100%;
+  max-width:100%;
   object-fit: fill;
 }
 
