--- a/css/booking.css
+++ b/css/booking.css
@@ -17,8 +17,25 @@ h2 {
   margin: auto;
   width: 50%;
   height: 100%;
-
 }
+
+.bview-table {
+  margin-top: 10px;
+}
+
+th {
+  background-color: #5c636a;
+}
+
+tr {
+  align-content: center;
+  text-align: center;
+}
+
+tr:nth-child(odd) {
+  background-color: #5c636a;
+}
+
 
 .allback-book {
   background-color: #212529;
@@ -47,7 +64,7 @@ h2 {
   margin-bottom: 10px;
   width: 100%;
   height: 250px;
-  background-color: gray;
+  background-color: #5c636a;
   display: flex;
 }
 
