--- a/css/activities.css
+++ b/css/activities.css
@@ -60,9 +60,7 @@ button {
   height: 50vh;
   text-align: center;
   justify-content: center;
-  width: 100vw;
-
-
+  width: 100%;
   object-fit: cover;
 
   top: 0;
@@ -111,7 +109,7 @@ button {
 
 .activities-img {
   display: flex;
-  width: 100vw;
+  width: 100%;
   object-fit: cover;
   position: absolute;
   top: 0;
