--- a/css/main.css
+++ b/css/main.css
@@ -152,3 +152,30 @@
   margin-right: 10px;
   color: white;
 }
+
+
+/* STYLET KNAP: */
+.button-50 {
+  background-color: #000;
+  border: 1px solid #000;
+  border-radius: 4px;
+  box-shadow: #fff 4px 4px 0 0, #000 4px 4px 0 1px;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  margin: 0 5px 10px 0;
+  overflow: visible;
+  padding: 12px 40px;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Rajdhani', sans-serif;
+  letter-spacing: 1.7px;
+}
+
+.button-50:hover {
+  opacity: 0.5;
+}
