--- a/css/booking.css
+++ b/css/booking.css
@@ -62,6 +62,7 @@ tr:nth-child(odd) {
 
 .activity-info {
   height: 100%;
+  width: 100%;
   background-color: #000;
   color: white;
 }
@@ -144,7 +145,7 @@ color: white;
   width: 300px;
   position: fixed;
   bottom:50%;
-  right:0px;
+  right: 0;
   margin-right: 50px;
 
 }
